tests/NormalTests/paczka1/small_fuzzy/50512224.err
Error in line 3: gKIhQGooXHm A945 24,3
Error in line 11: A402 A945 24,4
